--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,10 @@ html, body, .root {
   height: 100%;
 }
 
+h1, h2, h3, h4 {
+  text-align: center;
+}
+
 body {
   line-height: 1.5;
 }
@@ -14,7 +18,7 @@ body, .app {
 
 .list-books-title {
   padding: 10px 0;
-  background: #2e7c31;
+  background: #0f9fd8;
   text-align: center;
 }
 
