--- a/src/Search.css
+++ b/src/Search.css
@@ -1,18 +1,34 @@
+html, body, .root {
+  height: 100%;
+  box-sizing: content-box;
+}
+
 .books-list {
-  list-style-type: decimal;
   width: auto;
   margin: auto;
-}
-
-ol.books-grid {
-  width: auto;
-  margin: auto;
-}
-
-ol.books-list ol {
-  float: right;
-  width: 200px;
-  flex-wrap: wrap;
-  margin-top: 60px;
   padding-bottom: 10px;
+}
+
+.book-top {
+
+}
+
+.books-list ol {
+  display:inline-grid;
+  width: 180px;
+  margin-top: 50px;
+  padding-bottom: 50px;
+  margin-left: auto;
+  margin-right: auto;
+  max-height: 200px;
+}
+
+.book-authors {
+  box-sizing: content-box;
+  max-height: 50px;
+}
+
+.book-title {
+  box-sizing: content-box;
+  max-height: 100px;
 }
