Prettier + gfonts + favicon

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,26 @@
+@import url('https://fonts.googleapis.com/css?family=Baloo+Thambi|Montserrat');
+
 html, body, .root {
   height: 100%;
 }
 
 h1 {
   text-align: center;
-  font-family: fantasy;
+  font-family: Baloo Thambi;
   font-size: 5em;
 }
 
 p {
   text-align: center;
-  font-family: fantasy;
-  font-size: 2em;
+  font-family: Montserrat;
+  font-size: 1.4em;
   margin: 0px;
   color: #fff0e0;
 }
 
 h2, h3, h4 {
   text-align: center;
-  font-family: fantasy;
+  font-family: Montserrat;
 }
 
 body {
@@ -33,7 +35,7 @@ body, .app {
 
 .list-books-title {
   padding: 10px 2;
-  background: #0f9fd8;
+  background: #0f9fd8; /*myreads background*/
   text-align: center;
 }
 
@@ -59,7 +61,7 @@ body, .app {
 }
 
 .bookshelf-title {
-  border-bottom: 1px solid #dedede;
+  border-bottom: 1px solid #6d91a5;
 }
 
 .bookshelf-books {
@@ -75,9 +77,9 @@ body, .app {
 .open-search button {
   display: block;
   width: 50px;
-  height: 50px;
+  height: 60px;
   border-radius: 50%;
-  background: #2e7d32;
+  background: #0f9fd8;
   background-image: url('./icons/add.svg');
   background-repeat: no-repeat;
   background-position: center;
@@ -88,7 +90,7 @@ body, .app {
 }
 
 .open-search button:hover {
-  background-color: rgb(0, 102, 0);
+  background-color: rgb(14, 98, 216);
 }
 
 
@@ -185,10 +187,10 @@ button:active {
   position: absolute;
   right: 0;
   bottom: -10px;
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   border-radius: 50%;
-  background: #60ac5d;
+  background: #0f9fd8;
   background-image: url('./icons/arrow-drop-down.svg');
   background-repeat: no-repeat;
   background-position: center;
